k8s/score-service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: score-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: score-service
  template:
    metadata:
      labels:
        app: score-service
    spec:
      containers:
      - name: score-service
        image: "sisyphoscar/product-battle-score-service:1.0.1"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082 # HTTP
        - containerPort: 8083 # gRPC

---

apiVersion: v1
kind: Service
metadata:
  name: score-service
spec:
  selector:
    app: score-service
  ports:
  - protocol: TCP
    name: http-port
    port: 8082
    targetPort: 8082
  - protocol: TCP
    name: grpc-port
    port: 8083
    targetPort: 8083
